[project]
name = "generate-veo-video"
version = "0.2.1"
description = "A CLI tool for generating videos using Google's Veo 3.1 model and Gemini Deep Research."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Charles Forsyth", email = "charles.forsyth@example.com"}
]
dependencies = [
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
generate-veo = "generate_veo3_video:main"
deep-research = "deep_research:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
